# MangoAgent

./: .gitignore  FLOW_TROUBLESHOOTING.md  README.md  STATUS.md  app.py  main.py  patch_replace_bilibili_clean.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.ps1
agent/: models.py  tasks.py
agent/brain/: core.py  system_prompt.md  tools.py
agent/collectors/: bilibili.py  bilibili.py.bak  bilibili.py.bak2
agent/enhancers/: gemini_vision.py  prompt_expander.py
agent/generators/: flow_automator.py  veo_api.py
agent/graph/: pipeline.py  pipeline_series.py  state.py
agent/hotspot/: finder.py
agent/interactive/: refiner.py  refiner.py.bak  refiner.py.bak2
agent/iterators/: delta_normalizer.py  delta_normalizer.py.bak  merge_policy.py  series.py  series.py.bak  series.py.bak2  series_trace.py  series_trace.py.bak  series_trace.py.bak2
agent/miners/: comments.py  comments.py.bak  insight_schema.py
agent/prompt/: composer.py  composer_json.py  composer_json.py.bak  composer_json.py.bak2  schema_json.py  schema_json.py.bak
agent/registry/: store.py
agent/reports/: trace_report.py  trace_report.py.bak
agent/utils/: templates.py
cli/: agent.py  agent_graph.py  agent_graph_series.py  series_cli.py  series_trace_cli.py  series_trace_cli.py.bak
config/: default.yaml  logging.yaml
docs/: NEW_FEATURES.md  README.md  STREAMING_OUTPUT.md  USAGE_EXAMPLES.md
prompts/system_templates/: comment_insight_system.txt  gemini_vision_system.txt  prompt_expander_system.txt  refiner_system.txt
scripts/: format.ps1
tests/: test_health.py
